<resources>
    <string name="app_name">Code Scanner</string>
    <string name="product_id">PRODUCT ID :</string>
    <string name="scan_bar_code_for_product_id">Scan Bar Code For Product ID.</string>
    <string name="product_price">PRODUCT PRICE :</string>
    <string name="scan_qr_code_for_product_price">Scan QR Code For Product Price.</string>
    <string name="scan_barcode_or_qr_code">Scan Barcode or QR code</string>
</resources>
