<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/product_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id"
        android:layout_margin="20dp"
        android:text="@string/scan_bar_code_for_product_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#5C5B5B"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvresult"
        android:layout_margin="20dp"
        android:text="@string/product_price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvresult2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price"
        android:layout_margin="20dp"
        android:text="@string/scan_qr_code_for_product_price"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#5C5B5B"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:text="@string/scan_barcode_or_qr_code" />
</RelativeLayout>
